# ChangeLog for www-client/mozilla-firefox
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.307 2007/07/21 18:06:03 armin76 Exp $

  21 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  -files/gentoo-default-prefs-r1.js, mozilla-firefox-2.0.0.5.ebuild:
  Revert the langpack thing, bug 182175

  19 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  files/icon/mozilla-firefox-1.5-unbranded.desktop,
  files/icon/mozilla-firefox-1.5.desktop, +files/gentoo-default-prefs-r1.js,
  mozilla-firefox-2.0.0.5.ebuild:
  Fix desktop files, bug 185869 and now it uses the langpack according to the
  locale, bug 182175

*mozilla-firefox-2.0.0.5 (18 Jul 2007)

  18 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-2.0.0.5.ebuild:
  Version bump wrt security #185737

  13 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  mozilla-firefox-1.5.0.12.ebuild:
  Stable for HPPA (bug #183195).

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-2.0.0.4.ebuild:
  Bump patchset for issues in fbsd, patches provided by Roy Marples <uberlord
  at gentoo dot org>, bug 184099

  27 Jun 2007; Lars Weiler <pylon@gentoo.org>
  mozilla-firefox-1.5.0.12.ebuild:
  Stable on ppc; bug #183195.

  26 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  mozilla-firefox-1.5.0.12.ebuild:
  Stable on sparc wrt #183195

  25 Jun 2007; Christoph Mende <angelos@gentoo.org>
  mozilla-firefox-1.5.0.12.ebuild:
  Stable on amd64 wrt bug 183195

*mozilla-firefox-1.5.0.12 (25 Jun 2007)

  25 Jun 2007; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-1.5.0.8.ebuild, -mozilla-firefox-1.5.0.9.ebuild,
  -mozilla-firefox-1.5.0.11.ebuild, +mozilla-firefox-1.5.0.12.ebuild:
  Version bump, remove old, and stabilize on ia64/x86

  13 Jun 2007; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-2.0.0.4.ebuild:
  Remove forced MAKEOPTS, bug 181722

  08 Jun 2007; Raúl Porcel <armin76@gentoo.org>