@@ -335,18 +335,18 @@ EBUILD mozilla-firefox-2.0.0.3.ebuild 9073 RMD160 3f25408f72a704947d5155201721d8
 MD5 748c1772ececeae8bdfc2a3b0a8c1f66 mozilla-firefox-2.0.0.3.ebuild 9073
 RMD160 3f25408f72a704947d5155201721d82ed5bba100 mozilla-firefox-2.0.0.3.ebuild 9073
 SHA256 cf8b0e877f09c165a392cf9e59d3c8de4b76a2725fb6f96dc5e538720e142150 mozilla-firefox-2.0.0.3.ebuild 9073
-EBUILD mozilla-firefox-2.0.0.4.ebuild 9114 RMD160 6cd208d6541bb8649e015c69946e6cc550de73d5 SHA1 b75168d61f8780f56e83a85bb1b7a324b901faa4 SHA256 132c421ac144ab2d5661c98a3a210ba326843bd59e73ea0d1552a6133f2beedc
-MD5 51d2e40a39bef8e6303ceba9f0cdc449 mozilla-firefox-2.0.0.4.ebuild 9114
-RMD160 6cd208d6541bb8649e015c69946e6cc550de73d5 mozilla-firefox-2.0.0.4.ebuild 9114
-SHA256 132c421ac144ab2d5661c98a3a210ba326843bd59e73ea0d1552a6133f2beedc mozilla-firefox-2.0.0.4.ebuild 9114
-EBUILD mozilla-firefox-2.0.0.5.ebuild 9205 RMD160 e27aeef6dc50629cc3334839c318b1ce26b32d0a SHA1 a6e98994106d1aad7b3b3fd237f67fa0a4542feb SHA256 13b1c9692c2b1a0c190a95cd3aa9d177ba94ab5500d88cbd01b0a04ecb4f1a96
-MD5 b5e720f01db138eb8fd35be54663e58e mozilla-firefox-2.0.0.5.ebuild 9205
-RMD160 e27aeef6dc50629cc3334839c318b1ce26b32d0a mozilla-firefox-2.0.0.5.ebuild 9205
-SHA256 13b1c9692c2b1a0c190a95cd3aa9d177ba94ab5500d88cbd01b0a04ecb4f1a96 mozilla-firefox-2.0.0.5.ebuild 9205
-MISC ChangeLog 68988 RMD160 758b0f1df82b27fec39ae9b93d42ac83d5cee1d1 SHA1 b62b0fd363c36946991989fa8f4dcccf53963b1a SHA256 68045038a8149582230e1dafacc748d036810ff9616414ef1d95806b343630dc
-MD5 ae18f884e2a5083aa9ca4140dccc743f ChangeLog 68988
-RMD160 758b0f1df82b27fec39ae9b93d42ac83d5cee1d1 ChangeLog 68988
-SHA256 68045038a8149582230e1dafacc748d036810ff9616414ef1d95806b343630dc ChangeLog 68988
+EBUILD mozilla-firefox-2.0.0.4.ebuild 9250 RMD160 10e7c456177d68b6f82c3a715b5c9543d67d6967 SHA1 c9aeaae3aeafb1e4fa611b3e942606b1ac4b0032 SHA256 ab6f5241a0222d4c5cf27b1d686d346ec665d56e4b48f3c26d9cc99043853021
+MD5 c817bd7b043b42c74b5a4860d658d1b3 mozilla-firefox-2.0.0.4.ebuild 9250
+RMD160 10e7c456177d68b6f82c3a715b5c9543d67d6967 mozilla-firefox-2.0.0.4.ebuild 9250
+SHA256 ab6f5241a0222d4c5cf27b1d686d346ec665d56e4b48f3c26d9cc99043853021 mozilla-firefox-2.0.0.4.ebuild 9250
+EBUILD mozilla-firefox-2.0.0.5.ebuild 9341 RMD160 759d2767ce5d29896e086d7a5c4f43c30736cddc SHA1 d84e9466baf0c665205d96cae4cd09d647718879 SHA256 58dc38062ec69ff98d4c8da6940a0fe5d2503c5b6ef7214e594bc4db234310cc
+MD5 febee7d921a852984fb0c70f05583800 mozilla-firefox-2.0.0.5.ebuild 9341
+RMD160 759d2767ce5d29896e086d7a5c4f43c30736cddc mozilla-firefox-2.0.0.5.ebuild 9341
+SHA256 58dc38062ec69ff98d4c8da6940a0fe5d2503c5b6ef7214e594bc4db234310cc mozilla-firefox-2.0.0.5.ebuild 9341
+MISC ChangeLog 69297 RMD160 00090c881b969aa7f9e4e0dc9ab1844bdbf303a6 SHA1 4768c881734c10e818745a028ea8acaa8c8467d0 SHA256 fdd481b37597e66384dafb58b8bb95f7a333c6c591a0bf90030433c7a5db1719
+MD5 5978fe6001182cad19d35953edc3796d ChangeLog 69297
+RMD160 00090c881b969aa7f9e4e0dc9ab1844bdbf303a6 ChangeLog 69297
+SHA256 fdd481b37597e66384dafb58b8bb95f7a333c6c591a0bf90030433c7a5db1719 ChangeLog 69297
 MISC metadata.xml 160 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 SHA1 5015c07af2083f20f9552d7fb11afb5ea69af345 SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b
 MD5 ce23390351fe8020387d93ee29e09a3d metadata.xml 160
 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 metadata.xml 160
