@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/mozilla-firefox-2.0.0.5.ebuild,v 1.4 2007/07/21 18:34:14 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/mozilla-firefox-2.0.0.5.ebuild,v 1.5 2007/07/23 08:40:27 pingu Exp $
 
 WANT_AUTOCONF="2.1"
 
@@ -191,7 +191,9 @@ src_compile() {
 	# requirements while compiling
 	edit_makefiles
 
-	emake || die
+	# Anything more than -j1 will still break things, please don't remove until
+	# you're sure upstream has fixed this. See bug #135420.
+	emake -j1 || die
 }
 
 pkg_preinst() {
